# murlix

./: .env.example  .gitignore  CHANGELOG-DOCS.md  ENHANCED_INPUT_FEATURES.md  GITHUB-PAGES-SETUP.md  README-DOCS.md  README.md  clear_command_fix.md  main.py  mkdocs.yml  murlix_diagrams.md  pyproject.toml  requirements-docs.txt  setup-docs.py  utils.py
.github/workflows/: docs-simple.yml  docs.yml
cli/: __init__.py  chat_loop.py  commands.py  session.py  slash_commands.py
core_agent/: agent.py  models.py
core_agent/prompt_agent/: agent.py
docs/: README.md  index.md
docs/api-reference/: cli-commands.md  core-modules.md  session-api.md
docs/developer-guide/: agent-configuration.md  architecture.md  custom-commands.md  extending.md
docs/examples/: basic-usage.md  custom-agents.md  integration.md
docs/getting-started/: configuration.md  installation.md  overview.md  quick-start.md
docs/includes/: mkdocs.md
docs/stylesheets/: anthropic-style.css  extra.css
docs/support/: contributing.md  faq.md  troubleshooting.md
docs/user-guide/: advanced-usage.md  interactive-mode.md  session-management.md  slash-commands.md
src/murlix/: __init__.py  chat.py  input_handler.py  session.py  slash_commands.py  ui.py
src/murlix/core_agent/: agent.py
src/murlix/utils/: __init__.py  helper.py
