[project]
name = "murlix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "manohar3000", email = "manohargehlot3000@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "google-adk>=1.8.0",
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
murlix = "murlix:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
